Finally, I can get onto more interesting things.

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -65,6 +65,10 @@ canvas {
     display: inline;
 }
 
+#resource {
+    display: none;
+}
+
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 16px;
